FEAT: new Folio for thanos

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css" />
 
-    <title>_____Abhisek Lamsal_____</title>
+    <title>_____Thaneshowr Joshi_____</title>
   </head>
 
   <body>
